--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,11 @@
 	<noscript>
 		You need to enable JavaScript to run this app.
   </noscript>
-    <div id='root'></div>
+  <div class="parent" id ='root'>
+    <div class="div1" id='myGlobe'> </div>
+    <div class="div2" id='myNews'> </div>
+  </div>
+    <!-- <div id='root'></div> -->
 	
 	<!--
       This HTML file is a template.
